# knowledgeable-cobra

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  example.env  pyproject.toml
app/: __init__.py  authenticator.py  chain.py  config.py  controller.py  document_processor.py  entity.py  prompt_processor.py  server.py
app/data_connection/: dashvector.py  milvus.py  mongo.py  qdrant.py  redis.py  weaviate.py
app/static/css/: main.css
app/templates/: about.html  base.html  dialogue.html  footer.html  header.html  library.html  main.html  message.html
