[tool.poetry]
name = "knowledgeable-cobra"
version = "0.1.0"
description = ""
authors = ["Zeyang Lin <4020306+linzeyang@users.noreply.github.com>"]
readme = "README.md"
license = "LICENSE.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
langserve = {extras = ["server"], version = "^0.2.2"}
langchain = "^0.2.5"
pydantic = {extras = ["email"], version = "^2.7.4"}
python-dotenv = "^1.0.1"
redis = {extras = ["hiredis"], version = "^5.0.6"}
motor = {extras = ["srv"], version = "^3.4.0"}
pymilvus = "^2.4.4"
qdrant-client = "^1.9.2"
weaviate-client = "^3.26.2"
dashscope = "^1.20.0"
dashvector = "^1.0.16"
cohere = "^5.5.8"
beautifulsoup4 = "^4.12.3"
pypdf = "^4.2.0"
python-multipart = "^0.0.9"
jinja2 = "^3.1.4"
jinja2-fragments = "^1.3.0"
pydantic-settings = "^2.3.3"


[tool.poetry.group.dev.dependencies]
pytailwindcss = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.coverage.run]
branch = true
source = [ "./" ]

[tool.coverage.report]
omit = [ "test_*.py", "conftest.py" ]

[tool.isort]
py_version = 310
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [ "./" ]
python_files = [ "test_*.py" ]
console_output_style = "count"

[tool.ruff]
line-length = 88
target-version = "py310"
output-format = "full"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "Q", "S", "W"]
ignore = ["B008", "S104"]
